[package]
name = "tonic"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.11.x" git tag.
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
categories = ["web-programming", "network-programming", "asynchronous"]
description = """
A gRPC over HTTP/2 implementation focused on high performance, interoperability, and flexibility.
"""
documentation = "https://docs.rs/tonic/0.11.0"
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
keywords = ["rpc", "grpc", "async", "futures", "protobuf"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/hyperium/tonic"
version = "0.11.0"

[features]
codegen = ["dep:async-trait"]
gzip = ["dep:flate2"]
zstd = ["dep:zstd"]
default = ["transport", "codegen", "prost"]
prost = ["dep:prost"]
tls = [
  "dep:rustls-pemfile",
  "transport",
  "dep:tokio-rustls",
  "dep:rustls",
  "dep:tokio",
  "tokio?/rt",
  "tokio?/macros",
]
tls-roots = ["tls-roots-common", "dep:rustls-native-certs"]
tls-roots-common = ["tls"]
tls-webpki-roots = ["tls-roots-common", "dep:webpki-roots"]
transport = [
  "dep:async-stream",
  "dep:axum",
  "channel",
  "dep:h2",
  "dep:hyper",
  "dep:tokio",
  "tokio?/macros",
  "tokio?/net",
  "tokio?/time",
  "dep:hyper-util",
  "dep:socket2",
  "dep:tower",
  "dep:hyper-timeout",
]
channel = []

# [[bench]]
# name = "bench_main"
# harness = false

[dependencies]
base64 = "0.22"
bytes = "1.6"
http = "1.1"
tracing = "0.1"

http-body = "1.0"
http-body-util = "0.1"
percent-encoding = "2.3"
pin-project = "1.1"
tower-layer = "0.3"
tower-service = "0.3"

# prost
prost = { version = "0.12", default-features = false, features = [
  "std",
], optional = true }

# codegen
async-trait = { version = "0.1", optional = true }

# transport
axum = { version = "0.7", default_features = false, optional = true }
h2 = { version = "0.4", optional = true }
hyper = { version = "1.3", features = ["full"], optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }
hyper-timeout = { version = "0.5", optional = true }
socket2 = { version = ">=0.4.7, <0.6.0", optional = true, features = ["all"] }
tokio = { version = "1", optional = true }
tokio-stream = { version = "0.1", features = ["net"] }
tower = { version = "0.4", default-features = false, features = [
  "balance",
  "buffer",
  "discover",
  "limit",
  "load",
  "make",
  "timeout",
  "util",
], optional = true }

# rustls
async-stream = { version = "0.3", optional = true }
rustls-pemfile = { version = "2.1", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = [
  "ring",
  "tls12",
] }
rustls = { version = "0.23", optional = true, default-features = false, features = [
  "ring",
  "std",
  "tls12",
] }
webpki-roots = { version = "0.26", optional = true }

# compression
flate2 = { version = "1.0", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
bencher = "0.1"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"
static_assertions = "1.1"
tokio = { version = "1", features = ["rt", "macros"] }
tower = { version = "0.4", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
harness = false
name = "decode"
